prod_snapshot_2015-09-24_1030/objects/CTI_Lists__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Record</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>CTI_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <label>List Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <label>company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <label>first_name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <label>last_name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number1__c</fullName>
        <label>number1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number2__c</fullName>
        <label>number2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number3__c</fullName>
        <label>number3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CTI List Rec</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>List_Name__c</columns>
        <columns>Lead_Record__c</columns>
        <columns>company__c</columns>
        <columns>first_name__c</columns>
        <columns>last_name__c</columns>
        <columns>number1__c</columns>
        <columns>number2__c</columns>
        <columns>number3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CTI List Rec Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTI List Recs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>